# Rust_Plants_vs_Zombies

./: Cargo.toml  README.md  output.txt  项目总体介绍.md
assets/images/zm/PoleVaultingZombie/walk1/: walk1.lnk
src/: game.rs  lib.rs  main.rs  my_game.rs  my_trait.rs  resources.rs  spawner.rs  tools.rs
src/entities/: bullet.rs  button.rs  car.rs  card.rs  grass.rs  mod.rs  my_enum.rs  plant.rs  sunshine.rs  zombie.rs
src/entities_managers/: background_manager.rs  buttons_manager.rs  cards_manager.rs  map_manager.rs  mod.rs  sunshines_manager.rs  zombie_manager.rs
src/functionality/: my_image.rs
src/threads/: audio_thread.rs  game_thread.rs  mod.rs  resource_loader.rs
