[package]
name = "rusty_plants_vs_zombies"
version = "0.1.0"
authors = ["tangxianyu 2646163045@qq.com"]
edition = "2024"

[target.'cfg(windows)'.windows]
subsystem = "windows"

[dependencies]
ggez="0.7.0"
image = "0.25.6"
glam={version="0.30.2",features=["mint"]}
rand = "0.8.5"
async-std = "1.10"
crossbeam="0.8" #multithreaded tools
tokio = { version = "1", features = ["full"] }
rodio = "0.20.1"
lazy_static = "1.4"